[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.16", features = ["derive", "env"] }
config = "0.14.0"
getset = "0.1.2"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "derive"] }
thiserror = "1.0.63"
